fix select size + align row center

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -46,7 +46,6 @@ form button.btn:disabled {
 }
 
 .App {
-  align-items: center;
   top: 0;
   bottom: 0;
   right: 0;
@@ -71,11 +70,5 @@ form button.btn:disabled {
 @media only screen and (max-width: 560px) {
   html {
     font-size: 16px;
-  }
-}
-
-@media only screen and (max-height: 500px) {
-  .App {
-      align-items: start;
   }
 }
